--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Food Website</title>
 </head>
 <body>
     <div class="french-fries">
-        <img src="img/eiliv-aceron-d5PbKQJ0Lu8-unsplash.jpg">
+        <img src="img/eiliv-aceron-d5PbKQJ0Lu8-unsplash.jpg" alt="french fries picture by eiliv-aceron">
     </div>
     <nav>
         <div class="logo">Lefa's Inn</div>
@@ -22,5 +23,6 @@
             <h2>About us</h2>
             <p>Have an amazing experince with our delivery services</p>
     </div>
+    <img src="img/jonathan-borba-8l8Yl2ruUsg-unsplash.jpg" alt="Hamburg picure by jonathan-borba-8l8Yl2ruUsg-unsplash">
 </body>
 </html>
