--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <nav>
         <div class="logo">Lefa's Inn</div>
         <ul>
-            <li><a href="#">Menu</a></li>
+            <li><a href="content/menu.html">Menu</a></li>
             <li><a href="#">Delivery</a></li>
             <li><a href="#">Support</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <a href="img/menu.html"></a>
+    
     <div class="content">
         <div class="about">
             <h2>About us</h2>
