--- a/content/menu.html
+++ b/content/menu.html
@@ -6,6 +6,17 @@
 </head>
 <body>
     <h1>Menu</h1>
+    <div>
     <h2>Burgers</h2>
+    <img src="img/eiliv-aceron-pu6b4yIlQF4-unsplash-1.jpg" alt="Burger-pic by eiliv-aceron" width="150" height="150">
+    <p><em>Beef Patty</em></p>
+    <p><strong>R85.00</strong></p>
+    <img src="img/eiliv-aceron-SLLzRDiubQI-unsplash-2.jpg" alt="Burger-pic by eiliv-aceron" width="150" height="150">
+    <p><em>Burger</em></p>
+    <p><strong>R90.00</strong></p>
+    <img src="img/amirali-mirhashemian-j-MPEwH9LM4-unsplash-3.jpg" alt="Burger-pic by amirali" width="150" height="150">
+    <p><em>Double Cheese Burger</em></p>
+    <p><strong>R115.00</strong></p>
+    </div>
 </body>
 </html>
